# EZInput

./: .gptignore  LICENSE.txt  README.md  makefile  pyproject.toml
.github/: build_deploy_docs.yml  oncall_test.yml
.github/workflows/: build_deploy_docs.yml  build_deploy_pypi.yml  build_deploy_test_pypi.yml  generate_pdf.yml  oncall_test.yml
docs/: api.html  configuration.html  ezinput_tutorial.ipynb  index.html  script.js  style.css  tutorials.html  widgets.html
publication/: paper.bib  paper.md
src/easy_gui/: easy_gui.py
src/easygui/: __init__.py  easy_gui.py  easy_gui_jupyter.py  easy_gui_prompt.py
src/ezgui4jupyter/: __init__.py  ezgui.py  ezgui4notebook.py  ezgui4prompt.py
src/ezinput/: __init__.py  ezinput.py  ezinput_jupyter.py  ezinput_prompt.py  ipynb_runner.py  scripts.py
tests/: conftest.py  test_EasyGUI.py  test_easy_gui_prompt.py  test_ezinput_prompt.py  test_params.yml
tests/notebooks/: demo.ipynb  test_easy_gui_jupyter.ipynb  test_ezinput_jupyter.ipynb
